# automat_theory

./: .gitignore  README.md  eslint.config.mjs  jest.config.js  package.json
examples/: 01_03_2026_1.txt  01_03_2026_1_converted.txt  01_03_2026_2_converted.txt  01_03_2026_3.txt  01_03_2026_3_converted.txt  01_03_2026_4.txt  01_03_2026_4_converted.txt  01_03_2026_5.txt  01_03_2026_5_converted.txt  03_03_2026_1.txt  03_03_2026_1_converted.txt  03_03_2026_4.txt  14_11_2025_1.dot  14_11_2025_1.txt  14_11_2025_10.dot  14_11_2025_10.txt  14_11_2025_11.txt  14_11_2025_12.dot  14_11_2025_12.txt  14_11_2025_13.dot  14_11_2025_13.txt  14_11_2025_2.dot  14_11_2025_2.txt  14_11_2025_3.dot  14_11_2025_3.txt  14_11_2025_4.dot  14_11_2025_4.txt  14_11_2025_5.dot  14_11_2025_5.txt  14_11_2025_6.dot  14_11_2025_6.txt  14_11_2025_7.dot  14_11_2025_7.txt  14_11_2025_8.dot  14_11_2025_8.txt  14_11_2025_9.dot  14_11_2025_9.txt  24_02_2026_1.txt  24_02_2026_1_converted.txt  24_02_2026_2.txt  (+30 more)
lexer/: Lexer.ts
src/: chomskyNormalForm.ts  converter.ts  cyk.ts  determinizer.ts  dfaMinimizer.ts  epsilonElimination.ts  generator.ts  grammarParser.ts  grammarToDfa.ts  index.ts  parser.ts  processor.ts  regexParser.ts  regexToNfa.ts  types.ts
src/automata/: converter.ts  determinizer.ts  generator.ts  grammar-to-dfa.ts
tests/: cnf-cyk.test.ts  determinizer.test.ts  grammar.test.ts  integration.test.ts  lexer.test.ts  minimizer.test.ts  regex.test.ts
vm/: .clang-format  CMakeLists.txt  README.md
vm/include/: Opcodes.h  Parser.h  Vm.h
vm/src/: Parser.cpp  Vm.cpp  main.cpp
(+11 files in other folders)
